--- a/LOkopedia/LOkopedia/bin/LOkopedia.dll.config
+++ b/LOkopedia/LOkopedia/bin/LOkopedia.dll.config
@@ -34,7 +34,10 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <connectionStrings><add name="LOkopediaEntities" connectionString="metadata=res://*/Model.Model1.csdl|res://*/Model.Model1.ssdl|res://*/Model.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=leolee;initial catalog=LOkopedia;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="LOkopediaEntities1" connectionString="metadata=res://*/Model.LOkopediaModel.csdl|res://*/Model.LOkopediaModel.ssdl|res://*/Model.LOkopediaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=leolee;initial catalog=LOkopedia;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <connectionStrings>
+    <add name="LOkopediaEntities" connectionString="metadata=res://*/Model.Model1.csdl|res://*/Model.Model1.ssdl|res://*/Model.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=leolee;initial catalog=LOkopedia;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="LOkopediaEntities1" connectionString="metadata=res://*/Model.LOkopediaModel.csdl|res://*/Model.LOkopediaModel.ssdl|res://*/Model.LOkopediaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=leolee;initial catalog=LOkopedia;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
