--- a/LOkopedia/LOkopedia/LOkopedia.csproj
+++ b/LOkopedia/LOkopedia/LOkopedia.csproj
@@ -110,6 +110,7 @@
     <Content Include="View\Register.aspx" />
     <Content Include="View\Search.aspx" />
     <Content Include="View\Manage.aspx" />
+    <Content Include="View\WebForm1.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -270,6 +271,13 @@
     </Compile>
     <Compile Include="View\Manage.aspx.designer.cs">
       <DependentUpon>Manage.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="View\WebForm1.aspx.cs">
+      <DependentUpon>WebForm1.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="View\WebForm1.aspx.designer.cs">
+      <DependentUpon>WebForm1.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
